try to fix overflowing element on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -445,6 +445,7 @@ a:is(:link, :active, :visited).active {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0.5rem 0.5rem black;
+  overflow: hidden;
 }
 
 .cta-arrow {
